# plane-mcp-server-fork

./: .dockerignore  .editorconfig  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-DECLARATION.md  CLAUDE.md.old  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: publish-pypi.yml.original  test-stdio.yml  test.yml
.pi/: context.md  progress.md  quick-reference.md  test-modularization-plan.md
plane_mcp/: __main__.py  client.py  server.py
plane_mcp/tools/: work_item_relations.py
scripts/: test_local.sh  test_stdio.sh
tests/: README.md  conftest.py  test_integration.py  test_oauth_security.py  test_stateless_http.py  test_stdio_integration.py
tests/_deprecated/: README.md  test_stdio_integration.py
tests/core/: __init__.py  helpers.py  test_client.py
tests/fixtures/: __init__.py  config.py  conftest.py  transports.py
tests/test_modules/: __init__.py  test_projects.py  test_tool_registry.py  test_work_items.py
